--- a/res/layout/simple_calendar_view.xml
+++ b/res/layout/simple_calendar_view.xml
@@ -70,7 +70,7 @@
 	        android:layout_width="match_parent"
 	        android:layout_height="match_parent"
 	        android:orientation="vertical" >
-			<Button
+			<!-- <Button
 	    		android:id="@+id/day_event_1"
 	    		android:layout_width="wrap_content"
 	    		android:layout_height="32dp"
@@ -114,7 +114,7 @@
 	    		android:background="@drawable/calendar_top_header"
 	   	 		android:textAppearance="?android:attr/textAppearanceMedium"
 	    		android:textColor="#FFFFFF" >
-			</Button>
+			</Button> -->
 
 	
 	    </LinearLayout>
